tests/valid/types.p
# vim: ft=plasma
# This is free and unencumbered software released into the public domain.
# See ../LICENSE.unlicense

module Types 

# A simple enum
type Suit = Hearts | Diamonds | Spades | Clubs

# Empty main function.
func main() -> Int using IO {
    return 0
}

