tests/invalid/types_7.p
/*
 * vim: ft=plasma
 * This is free and unencumbered software released into the public domain.
 * See ../LICENSE.unlicense
 */

module Types_7

// Check that we get an okay error message when a type is not known.
func main() uses IO -> INt {
    return 0
}

